// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderLedger Component OrderLedger should render correctly 1`] = `
<div
  className=" elem-mb-MED "
>
  <Styled(Col)
    colSize={
      Object {
        "large": 12,
        "medium": 8,
        "small": 6,
      }
    }
    ignoreGutter={
      Object {
        "small": true,
      }
    }
  >
    <Styled(CollapsibleContainer)
      body={
        <React.Fragment>
          <ForwardRef
            className=" elem-mb-MED"
            data-locator="orderLedgerBox"
          >
            <ForwardRef
              className="items-total rowMargin"
              data-locator="orderLedgerItemLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  dataLocator="orderLedgerCount"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined (1):
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  0.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="tax-total rowMargin"
              data-locator="orderLedgerTaxLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  0.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="balance-total rowMargin"
              data-locator="orderLedgerBalanceTotalLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 5,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 3,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="right"
                >
                  0.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <Connect(LoyaltyBannerContainer)
              pageCategory=""
            />
          </ForwardRef>
          <Measure
            name="pricing_visible"
          />
        </React.Fragment>
      }
      className=""
      defaultOpen={false}
      header={
        <div
          className="elem-mb-SM order-ledger-header"
        >
          <ForwardRef
            className={null}
            color="text.primary"
            component="span"
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="semibold"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            undefined (0)
          </ForwardRef>
        </div>
      }
      iconLocator="arrowicon"
      isDefaultView={true}
      showHeaderAlways={false}
    />
  </Styled(Col)>
</div>
`;

exports[`OrderLedger Component OrderLedger should render correctly 2`] = `
<div
  className=" elem-mb-MED "
>
  <Styled(Col)
    colSize={
      Object {
        "large": 12,
        "medium": 8,
        "small": 6,
      }
    }
    ignoreGutter={
      Object {
        "small": true,
      }
    }
  >
    <Styled(CollapsibleContainer)
      body={
        <React.Fragment>
          <ForwardRef
            className=" elem-mb-MED"
            data-locator="orderLedgerBox"
          >
            <ForwardRef
              className="items-total rowMargin"
              data-locator="orderLedgerItemLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  dataLocator="orderLedgerCount"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined (1):
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="coupons-total rowMargin"
              data-locator="orderLedgerCouponsLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  -1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="promotions-total rowMargin"
              data-locator="orderLedgerPromotionLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  -1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="shipping-total rowMargin"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="shipping-total rowMargin"
              data-locator="orderLedgerShippingLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="tax-total rowMargin"
              data-locator="orderLedgerTaxLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <React.Fragment>
              <ForwardRef
                className="estimated-total rowMargin"
                data-locator="orderLedgerTotalLbl"
              >
                <ForwardRef
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="left"
                  >
                    undefined:
                  </ForwardRef>
                </ForwardRef>
                <ForwardRef
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="right"
                  >
                    1.00
                  </ForwardRef>
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                className="giftCard-total rowMargin"
                data-locator="orderLedgerGiftCardLbl"
              >
                <ForwardRef
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="left"
                  >
                    undefined:
                  </ForwardRef>
                </ForwardRef>
                <ForwardRef
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="right"
                  >
                    -1.00
                  </ForwardRef>
                </ForwardRef>
              </ForwardRef>
            </React.Fragment>
            <ForwardRef
              className="balance-total rowMargin"
              data-locator="orderLedgerBalanceTotalLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 5,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 3,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="right"
                >
                  1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="total-order-savings rowMargin"
              data-locator="orderLedgerTotalOrderSavingsLabel"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 5,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined
                  <ForwardRef
                    direction="top"
                    id="tool"
                    minWidth="205px"
                  >
                    <ForwardRef
                      alt="info"
                      className="circle-info-image"
                      src="/static/images/info-icon.png"
                    />
                  </ForwardRef>
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 3,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <Connect(LoyaltyBannerContainer)
              pageCategory=""
            />
          </ForwardRef>
          <Measure
            name="pricing_visible"
          />
        </React.Fragment>
      }
      className=""
      defaultOpen={false}
      header={
        <div
          className="elem-mb-SM order-ledger-header"
        >
          <ForwardRef
            className={null}
            color="text.primary"
            component="span"
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="semibold"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            undefined (1.00)
          </ForwardRef>
        </div>
      }
      iconLocator="arrowicon"
      isDefaultView={true}
      showHeaderAlways={false}
    />
  </Styled(Col)>
</div>
`;

exports[`OrderLedger Component on confirmation page OrderLedger on confirmation page should render correctly 1`] = `
<div
  className=" elem-mb-MED order-confirmation"
>
  <Styled(Col)
    colSize={
      Object {
        "large": 12,
        "medium": 8,
        "small": 6,
      }
    }
    ignoreGutter={
      Object {
        "small": true,
      }
    }
  >
    <Styled(CollapsibleContainer)
      body={
        <React.Fragment>
          <ForwardRef
            className=" elem-mb-MED"
            data-locator="orderLedgerBox"
          >
            <ForwardRef
              className="items-total rowMargin"
              data-locator="orderLedgerItemLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  dataLocator="orderLedgerCount"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined (1):
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="coupons-total rowMargin"
              data-locator="orderLedgerCouponsLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  -1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="promotions-total rowMargin"
              data-locator="orderLedgerPromotionLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs13"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  -1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="shipping-total rowMargin"
              data-locator="orderLedgerShippingLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="tax-total rowMargin"
              data-locator="orderLedgerTaxLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 4,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <React.Fragment>
              <ForwardRef
                className="estimated-total rowMargin"
                data-locator="orderLedgerTotalLbl"
              >
                <ForwardRef
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="left"
                  >
                    undefined:
                  </ForwardRef>
                </ForwardRef>
                <ForwardRef
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="right"
                  >
                    1.00
                  </ForwardRef>
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                className="giftCard-total rowMargin"
                data-locator="orderLedgerGiftCardLbl"
              >
                <ForwardRef
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="left"
                  >
                    undefined:
                  </ForwardRef>
                </ForwardRef>
                <ForwardRef
                  colSize={
                    Object {
                      "large": 6,
                      "medium": 4,
                      "small": 3,
                    }
                  }
                >
                  <ForwardRef
                    bodySize="one"
                    className={null}
                    color="primary"
                    component="p"
                    fontFamily="secondary"
                    fontSize="fs13"
                    fontWeight="semibold"
                    letterSpacing="normal"
                    lineHeight="normal"
                    link={null}
                    textAlign="right"
                  >
                    -1.00
                  </ForwardRef>
                </ForwardRef>
              </ForwardRef>
            </React.Fragment>
            <ForwardRef
              className="balance-total rowMargin"
              data-locator="orderLedgerBalanceTotalLbl"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 5,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="left"
                >
                  undefined:
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 3,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs18"
                  fontWeight="extrabold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  tag="span"
                  textAlign="right"
                >
                  1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              className="total-order-savings rowMargin"
              data-locator="orderLedgerTotalOrderSavingsLabel"
            >
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 5,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="left"
                >
                  undefined
                  <ForwardRef
                    direction="top"
                    id="tool"
                    minWidth="205px"
                  >
                    <ForwardRef
                      alt="info"
                      className="circle-info-image"
                      src="/static/images/info-icon.png"
                    />
                  </ForwardRef>
                </ForwardRef>
              </ForwardRef>
              <ForwardRef
                colSize={
                  Object {
                    "large": 6,
                    "medium": 3,
                    "small": 3,
                  }
                }
              >
                <ForwardRef
                  bodySize="one"
                  className={null}
                  color="primary"
                  component="p"
                  fontFamily="secondary"
                  fontSize="fs16"
                  fontWeight="semibold"
                  letterSpacing="normal"
                  lineHeight="normal"
                  link={null}
                  textAlign="right"
                >
                  1.00
                </ForwardRef>
              </ForwardRef>
            </ForwardRef>
            <Connect(LoyaltyBannerContainer)
              pageCategory=""
            />
          </ForwardRef>
          <Measure
            name="pricing_visible"
          />
        </React.Fragment>
      }
      className=""
      defaultOpen={false}
      header={
        <div
          className="elem-mb-SM order-ledger-header"
        >
          <ForwardRef
            className={null}
            color="text.primary"
            component="span"
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="semibold"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            undefined (1.00)
          </ForwardRef>
        </div>
      }
      iconLocator="arrowicon"
      isDefaultView={true}
      showHeaderAlways={true}
    />
  </Styled(Col)>
</div>
`;
